--- a/index.html
+++ b/index.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Fangi | Sosa</h1>
-    <p>Asociados</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Fangi|Sosa asociados</title>
+  </head>
+  <body>
+    <header>
+      <div>logo</div>
+      <h1>Fangi | Sosa</h1>
+      <p>Asociados</p>
+      <nav>
+        <ul>
+          <li>Nosotros</li>
+          <li>Servicios</li>
+          <li>Contáctenos</li>
+        </ul>
+      </nav>
+    </header>
+
+
+
+    <main>
+      <section id="banner">
+        <img id="banner-image" src="./images/legal1.jpeg" alt="">
+      </section>
+
+
+
+      <section id="nosotros">
+        <h2>Quienes somos</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, nulla temporibus dignissimos iste deleniti aspernatur soluta quasi excepturi necessitatibus a libero ipsum blanditiis ducimus inventore mollitia minus reprehenderit hic nemo.</p>
+        <p>Imagen</p>
+      </section>
+
+      <hr>
+
+      <section id="servicios">
+        <h2>Servicios</h2>
+        <div>
+            <div>Derecho laboral</div>
+            <div>Derecho penal</div>
+            <div>Derecho civil</div>
+            <div>Sucesiones</div>
+            <div>Sociedades</div>
+            <div>Consorcios</div>
+        </div>
+      </section>
+
+      <hr>
+
+      <section id="contacto">
+        <h2>Contáctenos</h2>
+        <p>form</p>
+      </section>
+
+      <hr>
+
+      <section id="mapa">
+        <p>mapa</p>
+      </section>
+
+      <hr>
+
+      <footer>
+        <p>Pie</p>
+      </footer>
+    </main>
+  </body>
 </html>
