--- a/index.html
+++ b/index.html
@@ -4,66 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Fangi|Sosa asociados</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Fangi Sosa y asociados</title>
   </head>
   <body>
     <header>
-      <div>logo</div>
-      <h1>Fangi | Sosa</h1>
-      <p>Asociados</p>
+      <div class="title">
+        <div class="title-logo">🏛</div>
+        <div class="title-names">
+          <h1>Fangi Sosa</h1>
+          <p>y asociados</p>
+        </div>
+      </div>
+
       <nav>
-        <ul>
-          <li>Nosotros</li>
-          <li>Servicios</li>
-          <li>Contáctenos</li>
-        </ul>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#contacto">Contáctenos</a>
       </nav>
     </header>
 
-
-
     <main>
-      <section id="banner">
-        <img id="banner-image" src="./images/legal1.jpeg" alt="">
-      </section>
-
-
+      <div id="banner">
+        <img id="banner-image" src="./images/legal1.jpeg" alt="" />
+      </div>
 
       <section id="nosotros">
         <h2>Quienes somos</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, nulla temporibus dignissimos iste deleniti aspernatur soluta quasi excepturi necessitatibus a libero ipsum blanditiis ducimus inventore mollitia minus reprehenderit hic nemo.</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, nulla
+          temporibus dignissimos iste deleniti aspernatur soluta quasi excepturi
+          necessitatibus a libero ipsum blanditiis ducimus inventore mollitia
+          minus reprehenderit hic nemo.
+        </p>
         <p>Imagen</p>
       </section>
 
-      <hr>
+      <hr />
 
       <section id="servicios">
         <h2>Servicios</h2>
         <div>
-            <div>Derecho laboral</div>
-            <div>Derecho penal</div>
-            <div>Derecho civil</div>
-            <div>Sucesiones</div>
-            <div>Sociedades</div>
-            <div>Consorcios</div>
+          <div>Derecho laboral</div>
+          <div>Derecho penal</div>
+          <div>Derecho civil</div>
+          <div>Sucesiones</div>
+          <div>Sociedades</div>
+          <div>Consorcios</div>
         </div>
       </section>
 
-      <hr>
+      <hr />
 
       <section id="contacto">
         <h2>Contáctenos</h2>
         <p>form</p>
       </section>
 
-      <hr>
+      <hr />
 
       <section id="mapa">
         <p>mapa</p>
       </section>
 
-      <hr>
+      <hr />
 
       <footer>
         <p>Pie</p>
