--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Fangi Sosa y asociados</title>
   </head>
   <body>
     <header>
       <div class="title">
-        <div class="title-logo">🏛</div>
+        <img src="./images/building-columns-solid.svg" class="title-logo"></img>
         <div class="title-names">
           <h1>Fangi Sosa</h1>
           <p>y asociados</p>
@@ -26,7 +32,7 @@
 
     <main>
       <div id="banner">
-        <img id="banner-image" src="./images/legal1.jpeg" alt="" />
+        <img id="banner-image" src="./images/legal2.webp" alt="" />
       </div>
 
       <section id="nosotros">
