--- a/index.html
+++ b/index.html
@@ -50,13 +50,55 @@
 
       <section id="servicios">
         <h2>Servicios</h2>
-        <div>
-          <div>Derecho laboral</div>
-          <div>Derecho penal</div>
-          <div>Derecho civil</div>
-          <div>Sucesiones</div>
-          <div>Sociedades</div>
-          <div>Consorcios</div>
+        <div class="servicios-fila">
+          
+          <div class="servicios-columna">
+            <div class="servicios-columna-item">
+              <h3>Derecho penal</h3>
+              <ul>
+                <li>Escarcelaciones</li>
+                <li>Querellas</li>
+                <li>Defensas</li>
+                <li>Recursos</li>
+                <li>Suspensión de juicio a prueba</li>
+                <li>Seguimiento de causas</li>
+                <li>Violencia de género</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="servicios-columna">
+            <div class="servicios-columna-item">
+              <h3>Derecho civil</h3>
+              <ul>
+                <li>Divorcios</li>
+                <li>Adopciones</li>
+                <li>Accidentes de tránsito</li>
+                <li>Consorcios</li>
+                <li>Determinación de la capacidad</li>
+                <li>Derechos realies</li>
+                <li>Contratos de alquileres</li>
+                <li>Contrato de servicios</li>
+                <li>Contratos societarios</li>
+                <li>Liquidación de expensas</li>
+                <li>Cambio de identidad de género</li>
+                <li>Desalojo</li>
+                <li>Constitución de sociedades</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="servicios-columna">
+            <div class="servicios-columna-item">
+              <h3>Derecho laboral</h3>
+              <ul>
+                <li>Parte demandada</li>
+                <li>Parte actora</li>
+                <li>Mediciones laborales (SECLO)</li>
+              </ul>
+            </div>
+          </div>
+
         </div>
       </section>
 
