--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <nav>
-        <a href="#nosotros">Nosotros</a>
+        <a class="nav-item" href="#nosotros">Nosotros</a>
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contáctenos</a>
       </nav>
