--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             id="mensaje"
             name="mensaje"
             placeholder="Escriba su consulta aquí..."
-
           ></textarea>
 
           <input type="submit" value="Enviar" />
@@ -81,12 +80,22 @@
 
       <section id="nosotros">
         <h2>¿Quiénes somos?</h2>
-        <p>Somos un Estudio Jurídico, conformado por un joven equipo de abogados, especializado en Derecho Penal, Previsional, Laboral, Civil y Comercial.</p>
-        <p>Nuestro Staff de profesionales brinda un asesoramiento personalizado al cliente, caracterizándonos por la celeridad en la respuesta y el trato responsable, amable y ágil.
-        </p>
-        <p>Respondemos a un amplio abanico de necesidades del cliente, acompañándolo en cada instancia del proceso, de manera concurrente y estratégica, brindando un asesoramiento integral, creativo y eficiente y asistiendo en la correcta toma de decisiones.</p>
-        <p>Representamos a nuestros clientes en cualquier instancia, ya sea extrajudicial, en negociación, mediación, conciliación, querellas, defensas y recursos de amparo, encontrando el respaldo que el cliente necesita durante la etapa prejudicial y judicial.</p>
-        <p>Tomamos casos de la Ciudad Autónoma de Buenos Aires (CABA) y la Provincia de Buenos Aires.</p>
+        <div class="texto">
+          <p>
+            Somos un Estudio Jurídico, conformado por un joven equipo de abogados, especializado en Derecho Penal, Previsional, Laboral, Civil y Comercial.
+            Nuestro Staff de profesionales brinda un asesoramiento personalizado al cliente, caracterizándonos por la celeridad en la respuesta y el
+            trato responsable, amable y ágil.
+          </p>
+          <p>
+            Respondemos a un amplio abanico de necesidades del cliente, acompañándolo en cada instancia del proceso, de manera concurrente y
+            estratégica, brindando un asesoramiento integral, creativo y eficiente y asistiendo en la correcta toma de decisiones.
+          </p>
+          <p>
+            Representamos a nuestros clientes en cualquier instancia, ya sea extrajudicial, en negociación, mediación, conciliación, querellas,
+            defensas y recursos de amparo, encontrando el respaldo que el cliente necesita durante la etapa prejudicial y judicial.
+            Tomamos casos de la Ciudad Autónoma de Buenos Aires (CABA) y la Provincia de Buenos Aires.
+          </p>
+        </div>
       </section>
 
       <section id="servicios">
