--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
       </section>
 
       <section id="servicios">
+        <h2>Servicios</h2>
+        <div class="servicios-detalle">
+
+
         <button class="accordion">Derecho penal</button>
         <div class="panel">
           <ul>
@@ -141,6 +145,7 @@
             <li>DETERMINACIÓN DE CAPACIDAD</li>
           </ul>
         </div>
+      </div>
       </section>
 
       <section id="mapa">
