--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <div class="banner">
         <div class="banner-item" id="sub">
           <div class="banner-item-titulos">
-            <p>Seguimiento de causas penales.</p>
-            <p>Contratos.</p>
-            <p>Despidos.</p>
-            <p>Constitución de sociedades.</p>
-            <p>Desalojos.</p>
+            <p>Sucesiones</p>
+            <p>Desalojos</p>
+            <p>Divorcios</p>
+            <p>Adopciones</p>
+            <p>Defensas penales</p>
           </div>
         </div>
 
