--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
       </section>
 
       <footer>
-        <p>Pie</p>
+        <div>
+          Estudio jurídico Fangi Sosa y Asociados - Copyright 2022
+        </div>
       </footer>
     </main>
   </body>
