--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
         <div>
           Estudio jurídico Fangi Sosa y Asociados - Copyright 2022
         </div>
+        <div class="redes-sociales">
+          <ul>
+            <li><a href="https://www.facebook.com/"><img src="./images/facebook.svg" alt="Facebook logo"></a></li>
+            <li><a href="https://www.instagram.com/"><img src="./images/instagram.svg" alt="Instagram logo"></a></li>
+            <li><a href="https://www.linkedin.com/"><img src="./images/linkedin.svg" alt="Linkedin logo"></a></li>
+            <li><a href="https://twitter.com/"><img src="./images/twitter.svg" alt="Twitter logo"></a></li>
+          </ul>
+        </div>
       </footer>
     </main>
   </body>
